fix on banner on the head-banners of heimar (stretch issue

--- a/sites/all/themes/at_krakkaruv/ruv_sass/components/_heimar.scss
+++ b/sites/all/themes/at_krakkaruv/ruv_sass/components/_heimar.scss
@@ -94,6 +94,7 @@
   .field-name-field-image-banner{
     img{
       width: 100%;
+      height:auto;
     }
   }
 
